new / new pages
- login
- statistics
- clients
- users
-tickets
-blogs
-single blog
-prootions
-policies
-single ticket

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -14,5 +14,56 @@
     "comprehensiveValue":"اجمالي قيمة الوثائق الشامل",
     "clientsTotal":"اجمالي عدد العملاء المسجلين",
     "clientsWithBuy":"اجمالي عدد العملاء مالكين الوثائق",
-    "openTickets":"تذاكر مفتوحة"
+    "openTickets":"تذاكر مفتوحة",
+    "name":"الإسم",
+    "email":"البريد الإلكترونى",
+    "previlige":"الصلاحية",
+    "createdDate":"تاريخ الإنشاء",
+    "action":"إجراء",
+    "export":"تصدير",
+    "import":"استيراد",
+    "login":"تسجيل دخول",
+    "password":"كلمة المرور",
+    "forgotPassword":"هل نسيت كلمة المرور؟",
+    "noData":"لا توجد بيانات مطابقة!",
+    "filter":"تصفية البحث",
+    "policyNumber":"رقم الوثيقة",
+    "company":"الشركة",
+    "insuranceType":"نوع التأمين",
+    "policyOwner":"مالك الوثيقة",
+    "policyValue":"قيمة الوثيقة",
+    "paymentStatus":"حالة الدفع",
+    "paymentMethod":"وسيلة الدفع",
+    "date":"التاريخ",
+    "phone":"رقم الجوال",
+    "nationalId":"رقم الهوية",
+    "username":"اسم المستخدم",
+    "messageTitle":"عنوان الرسالة",
+    "dateTime":"التاريخ و الوقت",
+    "status":"الحالة",
+    "closeTickets":"تذاكر مغلقة",
+    "processingTickets":"تذاكر قيد المراجعة",
+    "addCoupon":"إضافة كود خصم جديد",
+    "addUser":"إضافة مستخدم",
+    "codeTitle":"اسم الخصم",
+    "discount":"الخصم",
+    "expireDate":"تاريخ الإنتهاء",
+    "blogs":"المدونة",
+    "addNewBlog":"إضافة تدوينة",
+    "titleAr":"العنوان بالعربية",
+    "titleEn":"العنوان بالإنجليزية",
+    "image":"الصورة",
+    "postDate":"تاريخ النشر",
+    "writeReply":"أكتب ردك هنا",
+    "send":" إرسال ",
+    "generalSettings":"إعدادات عامة",
+    "seo":"سيو",
+    "contactInfo":"وسائل التواصل",
+    "websiteTitleAr":"عنوان الموقع باللغة العربية",
+    "websiteTitleEn":"عنوان الموقع باللغة الانجليزية",
+    "websiteDescAr":"وصف الموقع باللغة العربية",
+    "websiteDescEn":"وصف الموقع باللغة الإنجليزية",
+    "save":"حفظ",
+    "contentAr":"المحتوى باللغة العربية",
+    "contentEn":"المحتوى باللغة الإنجليزية"
 }
