--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,69 +1,95 @@
 {
     "statistics": " احصائيات ",
-    "manageUsers":"إدارة المستخدمين",
-    "docsManagment":"إدارة الوثائق",
-    "clientsManagment":"إداره العملاء",
-    "tickets":"إدارة تذاكر الدعم",
-    "promoCodes":"العروض الترويجية",
-    "settings":"الإعدادات",
-    "totalDocs":" اجمالى الوثائق ",
-    "docsTotalValue":"اجمالي قيمة الوثائق",
-    "tplCount":"اجمالي وثائق ضد الغير",
-    "tplValue":"اجمالي قيمة الوثائق ضد الغير",
-    "comprehensiveTotal":"اجمالي وثائق الشامل",
-    "comprehensiveValue":"اجمالي قيمة الوثائق الشامل",
-    "clientsTotal":"اجمالي عدد العملاء المسجلين",
-    "clientsWithBuy":"اجمالي عدد العملاء مالكين الوثائق",
-    "openTickets":"تذاكر مفتوحة",
-    "name":"الإسم",
-    "email":"البريد الإلكترونى",
-    "previlige":"الصلاحية",
-    "createdDate":"تاريخ الإنشاء",
-    "action":"إجراء",
-    "export":"تصدير",
-    "import":"استيراد",
-    "login":"تسجيل دخول",
-    "password":"كلمة المرور",
-    "forgotPassword":"هل نسيت كلمة المرور؟",
-    "noData":"لا توجد بيانات مطابقة!",
-    "filter":"تصفية البحث",
-    "policyNumber":"رقم الوثيقة",
-    "company":"الشركة",
-    "insuranceType":"نوع التأمين",
-    "policyOwner":"مالك الوثيقة",
-    "policyValue":"قيمة الوثيقة",
-    "paymentStatus":"حالة الدفع",
-    "paymentMethod":"وسيلة الدفع",
-    "date":"التاريخ",
-    "phone":"رقم الجوال",
-    "nationalId":"رقم الهوية",
-    "username":"اسم المستخدم",
-    "messageTitle":"عنوان الرسالة",
-    "dateTime":"التاريخ و الوقت",
-    "status":"الحالة",
-    "closeTickets":"تذاكر مغلقة",
-    "processingTickets":"تذاكر قيد المراجعة",
-    "addCoupon":"إضافة كود خصم جديد",
-    "addUser":"إضافة مستخدم",
-    "codeTitle":"اسم الخصم",
-    "discount":"الخصم",
-    "expireDate":"تاريخ الإنتهاء",
-    "blogs":"المدونة",
-    "addNewBlog":"إضافة تدوينة",
-    "titleAr":"العنوان بالعربية",
-    "titleEn":"العنوان بالإنجليزية",
-    "image":"الصورة",
-    "postDate":"تاريخ النشر",
-    "writeReply":"أكتب ردك هنا",
-    "send":" إرسال ",
-    "generalSettings":"إعدادات عامة",
-    "seo":"سيو",
-    "contactInfo":"وسائل التواصل",
-    "websiteTitleAr":"عنوان الموقع باللغة العربية",
-    "websiteTitleEn":"عنوان الموقع باللغة الانجليزية",
-    "websiteDescAr":"وصف الموقع باللغة العربية",
-    "websiteDescEn":"وصف الموقع باللغة الإنجليزية",
-    "save":"حفظ",
-    "contentAr":"المحتوى باللغة العربية",
-    "contentEn":"المحتوى باللغة الإنجليزية"
+    "manageUsers": "إدارة المستخدمين",
+    "docsManagment": "إدارة الوثائق",
+    "clientsManagment": "إداره العملاء",
+    "tickets": "إدارة تذاكر الدعم",
+    "promoCodes": "العروض الترويجية",
+    "settings": "الإعدادات",
+    "totalDocs": " اجمالى الوثائق ",
+    "docsTotalValue": "اجمالي قيمة الوثائق",
+    "tplCount": "اجمالي وثائق ضد الغير",
+    "tplValue": "اجمالي قيمة الوثائق ضد الغير",
+    "comprehensiveTotal": "اجمالي وثائق الشامل",
+    "comprehensiveValue": "اجمالي قيمة الوثائق الشامل",
+    "clientsTotal": "اجمالي عدد العملاء المسجلين",
+    "clientsWithBuy": "اجمالي عدد العملاء مالكين الوثائق",
+    "openTickets": "تذاكر مفتوحة",
+    "name": "الإسم",
+    "email": "البريد الإلكترونى",
+    "previlige": "الصلاحية",
+    "createdDate": "تاريخ الإنشاء",
+    "action": "إجراء",
+    "export": "تصدير",
+    "import": "استيراد",
+    "login": "تسجيل دخول",
+    "password": "كلمة المرور",
+    "forgotPassword": "هل نسيت كلمة المرور؟",
+    "noData": "لا توجد بيانات مطابقة!",
+    "filter": "تصفية البحث",
+    "policyNumber": "رقم الوثيقة",
+    "company": "الشركة",
+    "insuranceType": "نوع التأمين",
+    "policyOwner": "مالك الوثيقة",
+    "policyValue": "قيمة الوثيقة",
+    "paymentStatus": "حالة الدفع",
+    "paymentMethod": "وسيلة الدفع",
+    "date": "التاريخ",
+    "phone": "رقم الجوال",
+    "nationalId": "رقم الهوية",
+    "username": "اسم المستخدم",
+    "messageTitle": "عنوان الرسالة",
+    "dateTime": "التاريخ و الوقت",
+    "status": "الحالة",
+    "closeTickets": "تذاكر مغلقة",
+    "processingTickets": "تذاكر قيد المراجعة",
+    "addCoupon": "إضافة كود خصم جديد",
+    "addUser": "إضافة مستخدم",
+    "updateUser": "تعديل مستخدم",
+    "readUser": "عرض مستخدم",
+    "codeTitle": "اسم الخصم",
+    "discount": "الخصم",
+    "expireDate": "تاريخ الإنتهاء",
+    "blogs": "المدونة",
+    "addNewBlog": "إضافة تدوينة",
+    "titleAr": "العنوان بالعربية",
+    "titleEn": "العنوان بالإنجليزية",
+    "image": "الصورة",
+    "postDate": "تاريخ النشر",
+    "writeReply": "أكتب ردك هنا",
+    "send": " إرسال ",
+    "generalSettings": "إعدادات عامة",
+    "seo": "سيو",
+    "contactInfo": "وسائل التواصل",
+    "websiteTitleAr": "عنوان الموقع باللغة العربية",
+    "websiteTitleEn": "عنوان الموقع باللغة الانجليزية",
+    "websiteDescAr": "وصف الموقع باللغة العربية",
+    "websiteDescEn": "وصف الموقع باللغة الإنجليزية",
+    "save": "حفظ",
+    "contentAr": "المحتوى باللغة العربية",
+    "contentEn": "المحتوى باللغة الإنجليزية",
+    "confirm": "تأكيد",
+    "areUSure": "هل أنت متأكد من هذا الإجراء؟",
+    "yes": "نعم",
+    "cancel": "إلغاء",
+    "add": "إضافة",
+    "edit": "تعديل",
+    "successProccess": " تم العملية بنجاح ",
+    "success": "نجاح",
+    "errorProccess": "خطأ يرجى المحاولة لاحقا",
+    "error": "خطأ",
+    "confirmEmail":" تأكيد الإيميل ",
+    "httpErrors": {
+        "401": "لقد انتهت صلاحية جلستك. "
+    },
+    "errors": {
+      "idNumber": "يجب أن يبدأ رقم التعريف بالرقم 1 أو 2 وأن يتكون من 10 أرقام",
+      "serialNumber": "يجب أن يكون الرقم التسلسلي من 6 إلى 9 أرقام",
+      "required": "الحقل مطلوب",
+      "password": "يجب أن تحتوي كلمة المرور على أحرف صغيرة وكبيرة مع رقم واحد على الأقل وحرف خاص واحد",
+      "confirmPassword": "تأكيد كلمة المرور غير مطابقة لكلمة المرور",
+      "name": "يجب أن يكون الاسم > 8 أحرف",
+      "email": "البريد الإلكتروني يجب أن يكون صالحا",
+      "phone": "يجب أن يكون الهاتف مثل 05xxxxxxxxxx"
+    }
 }
