--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -24,6 +24,8 @@
     "import": "استيراد",
     "login": "تسجيل دخول",
     "password": "كلمة المرور",
+    "confirmPassword": " تأكيد كلمة المرور ",
+    "newPassword": "  كلمة المرور الجديدة",
     "forgotPassword": "هل نسيت كلمة المرور؟",
     "noData": "لا توجد بيانات مطابقة!",
     "filter": "تصفية البحث",
@@ -79,6 +81,10 @@
     "errorProccess": "خطأ يرجى المحاولة لاحقا",
     "error": "خطأ",
     "confirmEmail":" تأكيد الإيميل ",
+    "logout":"تسجيل خروج",
+    "code":"الكود المرسل على الإيميل",
+    "codeIsSent":"وصلك كود على البريد الإلكترونى",
+    "passwordIsChanged":" تم تغيير كلمة المرور بنجاح ",
     "httpErrors": {
         "401": "لقد انتهت صلاحية جلستك. "
     },
