new/clients module
- clients module (read, delete)
- reset password code 6 digits

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -80,11 +80,13 @@
     "success": "نجاح",
     "errorProccess": "خطأ يرجى المحاولة لاحقا",
     "error": "خطأ",
+    "search": "بحث",
     "confirmEmail":" تأكيد الإيميل ",
     "logout":"تسجيل خروج",
     "code":"الكود المرسل على الإيميل",
     "codeIsSent":"وصلك كود على البريد الإلكترونى",
     "passwordIsChanged":" تم تغيير كلمة المرور بنجاح ",
+    "readClient":"عرض بيانات العميل  ",
     "httpErrors": {
         "401": "لقد انتهت صلاحية جلستك. "
     },
