--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -99,5 +99,22 @@
       "name": "يجب أن يكون الاسم > 8 أحرف",
       "email": "البريد الإلكتروني يجب أن يكون صالحا",
       "phone": "يجب أن يكون الهاتف مثل 05xxxxxxxxxx"
+    },
+    "enums":{
+      "EQuotationTypeFilter":{
+        "1":"ضد الغير",
+        "2":"تأمين شامل",
+        "3":"الكل"
+      },
+      "EPaymentStatus":{
+        "1":" ناجحة",
+        "2":" فاشلة",
+        "3":" معلقة"
+      },
+      "ETicketsStatusFilter":{
+        "1":" مفتوحة",
+        "2":" مغلقة",
+        "3": "الكل"
+      }
     }
 }
