--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -19,7 +19,9 @@
     "email": "البريد الإلكترونى",
     "previlige": "الصلاحية",
     "createdDate": "تاريخ الإنشاء",
+    "slug":" تعريف العنصر",
     "action": "إجراء",
+    "delete":"حذف",
     "export": "تصدير",
     "import": "استيراد",
     "login": "تسجيل دخول",
@@ -40,7 +42,8 @@
     "phone": "رقم الجوال",
     "nationalId": "رقم الهوية",
     "username": "اسم المستخدم",
-    "messageTitle": "عنوان الرسالة",
+    "messageTitle": "عنوان التذكرة",
+    "messageDetails": "تفاصيل التذكرة",
     "dateTime": "التاريخ و الوقت",
     "status": "الحالة",
     "closeTickets": "تذاكر مغلقة",
@@ -49,6 +52,9 @@
     "addUser": "إضافة مستخدم",
     "updateUser": "تعديل مستخدم",
     "readUser": "عرض مستخدم",
+    "addBlog": "إضافة تدوينة",
+    "updateBlog": "تعديل تدوينة",
+    "readBlog": "عرض تدوينة",
     "codeTitle": "اسم الخصم",
     "discount": "الخصم",
     "expireDate": "تاريخ الإنتهاء",
@@ -70,6 +76,8 @@
     "save": "حفظ",
     "contentAr": "المحتوى باللغة العربية",
     "contentEn": "المحتوى باللغة الإنجليزية",
+    "blogImage":"صورة المدونة",
+    "uploadFile":"أرفق الصورة",
     "confirm": "تأكيد",
     "areUSure": "هل أنت متأكد من هذا الإجراء؟",
     "yes": "نعم",
@@ -87,6 +95,8 @@
     "codeIsSent":"وصلك كود على البريد الإلكترونى",
     "passwordIsChanged":" تم تغيير كلمة المرور بنجاح ",
     "readClient":"عرض بيانات العميل  ",
+    "contactMessages":"رسائل التواصل",
+    "attachment":"ملف ملحق",
     "httpErrors": {
         "401": "لقد انتهت صلاحية جلستك. "
     },
@@ -98,7 +108,8 @@
       "confirmPassword": "تأكيد كلمة المرور غير مطابقة لكلمة المرور",
       "name": "يجب أن يكون الاسم > 8 أحرف",
       "email": "البريد الإلكتروني يجب أن يكون صالحا",
-      "phone": "يجب أن يكون الهاتف مثل 05xxxxxxxxxx"
+      "phone": "يجب أن يكون الهاتف مثل 05xxxxxxxxxx",
+      "noSpaces":"المسافات غير مسموح بها"
     },
     "enums":{
       "EQuotationTypeFilter":{
