new / contacts module
- contact s module
- update blog module

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -19,7 +19,7 @@
     "email": "البريد الإلكترونى",
     "previlige": "الصلاحية",
     "createdDate": "تاريخ الإنشاء",
-    "slug":" تعريف العنصر",
+    "slug":" معرف العنصر",
     "action": "إجراء",
     "delete":"حذف",
     "export": "تصدير",
@@ -44,6 +44,8 @@
     "username": "اسم المستخدم",
     "messageTitle": "عنوان التذكرة",
     "messageDetails": "تفاصيل التذكرة",
+    "message":"الرسالة",
+    "subject":"الموضوع",
     "dateTime": "التاريخ و الوقت",
     "status": "الحالة",
     "closeTickets": "تذاكر مغلقة",
