new/ seo, general settings
- general settings
- seo settings

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -69,7 +69,7 @@
     "writeReply": "أكتب ردك هنا",
     "send": " إرسال ",
     "generalSettings": "إعدادات عامة",
-    "seo": "سيو",
+    "seo": "إعدادات السيو",
     "contactInfo": "وسائل التواصل",
     "websiteTitleAr": "عنوان الموقع باللغة العربية",
     "websiteTitleEn": "عنوان الموقع باللغة الانجليزية",
@@ -99,6 +99,27 @@
     "readClient":"عرض بيانات العميل  ",
     "contactMessages":"رسائل التواصل",
     "attachment":"ملف ملحق",
+    "address":"العنوان",
+    "instagram":"إنستجرام",
+    "facebook":"فسيبوك",
+    "youtube":"يوتيوب",
+    "x":"تويتر",
+    "showMedicalFaults":"عرض الأخطاء الطبية",
+    "showCarInsurance":"عرض تأمين السيارات",
+    "showMedicalInsurance":"عرض التأمين الطبي",
+    "homeTitle":"عنوان الرئيسية",
+    "homeDescription":"وصف الرئيسية",
+    "contactTitle":"عنوان صفحة التواصل",
+    "contactDescription":"وصف صفحة التواصل",
+    "aboutTitle":"عنوان من نحن",
+    "aboutDescription":"وصف من نحن",
+    "blogsTitle":"عنوان صفحة المدونة",
+    "blogsDescription":"وصف صفحة المدونة",
+    "privacyPolicyTitle":"عنوان صفحة الخصوصية",
+    "privacyPolicyDescription":"وصف صفحة الخصوصية",
+    "termsTitle":"عنوان صفحة الشروط و الأحكام",
+    "termsDescription":"وصف صفحة الشروط و الأحكام",
+    "donePleaseLoginAgain":"تم تغيير كلمة المرور بنجاح, برجاء تسجيل الدخول بكلمة المرور الجديدة",
     "httpErrors": {
         "401": "لقد انتهت صلاحية جلستك. "
     },
