new / en localization

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,1 +1,155 @@
-{}
+{
+    "lang":"عربي",
+    "statistics": " statistics ",
+    "manageUsers": "User management",
+    "docsManagment": "Document management",
+    "clientsManagment": "Customer management",
+    "tickets": "Manage support tickets",
+    "promoCodes": "Promotions",
+    "settings": "Settings",
+    "totalDocs": " Total documents ",
+    "docsTotalValue": "Total value of documents",
+    "tplCount": "Total documents against others",
+    "tplValue": "The total value of documents against others",
+    "comprehensiveTotal": "Total comprehensive documentation",
+    "comprehensiveValue": "Total comprehensive value of documents",
+    "clientsTotal": "Total number of registered customers",
+    "clientsWithBuy": "The total number of clients who own documents",
+    "openTickets": "Tickets are open",
+    "name": "the name",
+    "email": "e-mail",
+    "previlige": "Validity",
+    "createdDate": "Creation date",
+    "slug": " Item ID",
+    "action": "Procedure",
+    "delete": "delete",
+    "export": "export",
+    "import": "import",
+    "login": "Login",
+    "password": "password",
+    "confirmPassword": " Confirm password ",
+    "newPassword": "  New Password",
+    "forgotPassword": "Forgot your password?",
+    "noData": "No matching data!",
+    "filter": "Filter your search",
+    "policyNumber": "Document number",
+    "company": "Company",
+    "insuranceType": "Insurance type",
+    "policyOwner": "Document owner",
+    "policyValue": "Document value",
+    "paymentStatus": "Payment status",
+    "paymentMethod": "Payment method",
+    "date": "the date",
+    "phone": "Mobile number",
+    "nationalId": "ID number",
+    "username": "user name",
+    "messageTitle": "Ticket address",
+    "messageDetails": "Ticket details",
+    "message": "message",
+    "subject": "the topic",
+    "dateTime": "Date and time",
+    "status": "the condition",
+    "closeTickets": "Tickets are closed",
+    "processingTickets": "Tickets are under review",
+    "addCoupon": "Add a new discount code",
+    "addUser": "Add user",
+    "updateUser": "Edit user",
+    "readUser": "User view",
+    "addBlog": "Add a post",
+    "updateBlog": "Edit a post",
+    "readBlog": "View post",
+    "codeTitle": "Name of opponent",
+    "discount": "opponent",
+    "expireDate": "Expiry date",
+    "blogs": "Blog",
+    "addNewBlog": "Add a post",
+    "titleAr": "Title in Arabic",
+    "titleEn": "Title in English",
+    "image": "Photo",
+    "postDate": "Publication date",
+    "writeReply": "Write your response here",
+    "send": " send ",
+    "generalSettings": "General settings",
+    "seo": "SEO settings",
+    "contactInfo": "Communication means",
+    "websiteTitleAr": "Website address in Arabic",
+    "websiteTitleEn": "Website address in English",
+    "websiteDescAr": "Site description in Arabic",
+    "websiteDescEn": "Site description in English",
+    "save": "save",
+    "contentAr": "Content in Arabic",
+    "contentEn": "Content in English",
+    "blogImage": "Blog image",
+    "uploadFile": "Attach the photo",
+    "confirm": "are you sure?",
+    "areUSure": "Are you sure about this procedure?",
+    "yes": "Yes",
+    "cancel": "cancel",
+    "add": "add",
+    "edit": "edit",
+    "successProccess": " The operation was completed successfully ",
+    "success": "success",
+    "errorProccess": "Error, please try again later",
+    "error": "mistake",
+    "search": "search",
+    "confirmEmail": " Confirm email ",
+    "logout": "Log out",
+    "code": "The code sent by email",
+    "codeIsSent": "You received a code via email",
+    "passwordIsChanged": " The password has been changed successfully ",
+    "readClient": "View customer data  ",
+    "contactMessages": "Contact messages",
+    "attachment": "File attachment",
+    "address": "the address",
+    "instagram": "Instagram",
+    "facebook": "Facebook",
+    "youtube": "YouTube",
+    "x": "Twitter",
+    "showMedicalFaults": "Show medical faults",
+    "showCarInsurance": "Show Car insurance",
+    "showMedicalInsurance": "Show medical insurance",
+    "homeTitle": "Home title",
+    "homeDescription": "Home Description",
+    "contactTitle": "Contact page title",
+    "contactDescription": "Description of the contact page",
+    "aboutTitle": "About Us Title",
+    "aboutDescription": "Description of who we are",
+    "blogsTitle": "Blog page title",
+    "blogsDescription": "Blog page description",
+    "privacyPolicyTitle": "Privacy page title",
+    "privacyPolicyDescription": "Privacy page description",
+    "termsTitle": "Title of the terms and conditions page",
+    "termsDescription": "Description of the terms and conditions page",
+    "donePleaseLoginAgain": "The password has been changed successfully, please log in with the new password",
+    "httpErrors": {
+      "401": "Your session has expired. "
+    },
+    "errors": {
+      "idNumber": "The identification number must start with the number 1 or 2 and be 10 digits long",
+      "serialNumber": "The serial number must be 6 to 9 digits",
+      "required": "Field is required",
+      "password": "The password must contain lowercase and uppercase letters with at least one number and one special character",
+      "confirmPassword": "Confirm the password does not match the password",
+      "name": "Name must be > 8 characters",
+      "email": "Email must be valid",
+      "phone": "The phone should be something like 05xxxxxxxxx",
+      "noSpaces": "Spaces are not allowed"
+    },
+    "enums": {
+      "EQuotationTypeFilter": {
+        "1": "against others",
+        "2": "comprehensive insurance",
+        "3": "all"
+      },
+      "EPaymentStatus": {
+        "1": " successful",
+        "2": " failed",
+        "3": " suspended"
+      },
+      "ETicketsStatusFilter": {
+        "1": " open",
+        "2": " closed",
+        "3": "all"
+      }
+    }
+  }
