--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,4 +1,5 @@
 {
+    "lang":"English",
     "statistics": " احصائيات ",
     "manageUsers": "إدارة المستخدمين",
     "docsManagment": "إدارة الوثائق",
