new / change password
- change password
- replace id with index in table

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -121,6 +121,8 @@
     "termsTitle":"عنوان صفحة الشروط و الأحكام",
     "termsDescription":"وصف صفحة الشروط و الأحكام",
     "donePleaseLoginAgain":"تم تغيير كلمة المرور بنجاح, برجاء تسجيل الدخول بكلمة المرور الجديدة",
+    "changePassword":"تغيير كلمة المرور",
+    "oldPassword":"كلمة المرور القديمة",
     "httpErrors": {
         "401": "لقد انتهت صلاحية جلستك. "
     },
