--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -122,6 +122,7 @@
     "termsDescription": "Description of the terms and conditions page",
     "donePleaseLoginAgain": "The password has been changed successfully, please log in with the new password",
     "changePassword":"Change Password",
+    "oldPassword":"Old Password",
     "httpErrors": {
       "401": "Your session has expired. "
     },
