new / topbar and faqs module

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,5 +1,7 @@
 {
     "lang":"English",
+    "hello":"مرحباً, {{name}}",
+    "back":"رجوع",
     "statistics": " احصائيات ",
     "manageUsers": "إدارة المستخدمين",
     "docsManagment": "إدارة الوثائق",
@@ -20,7 +22,7 @@
     "email": "البريد الإلكترونى",
     "previlige": "الصلاحية",
     "createdDate": "تاريخ الإنشاء",
-    "slug":" معرف العنصر",
+    "slug":" رابط التدوينة (لا يتكرر) ",
     "action": "إجراء",
     "delete":"حذف",
     "export": "تصدير",
@@ -123,6 +125,12 @@
     "donePleaseLoginAgain":"تم تغيير كلمة المرور بنجاح, برجاء تسجيل الدخول بكلمة المرور الجديدة",
     "changePassword":"تغيير كلمة المرور",
     "oldPassword":"كلمة المرور القديمة",
+    "faqs":"الأسئلة الشائعة",
+    "addFaq":"إضافة سؤال",
+    "updateFaq":"تعديل سؤال",
+    "readFaq":"عرض سؤال",
+    "descriptionAr":"الوصف بالعربية",
+    "descriptionEn":"الوصف بالإنجليزية",
     "httpErrors": {
         "401": "لقد انتهت صلاحية جلستك. "
     },
